--- a/tools/perf/Makefile.config
+++ b/tools/perf/Makefile.config
@@ -725,6 +725,10 @@ else
   endif
 endif
 
+ifdef HAVE_NO_LIBBFD
+  feature-libbfd := 0
+endif
+
 ifeq ($(feature-libbfd), 1)
   EXTLIBS += -lbfd -lopcodes
 else
